--- a/nginx.conf
+++ b/nginx.conf
@@ -51,25 +51,19 @@ server {
                 try_files $uri $uri/ =404;
         }
 
-        location /downloader {
-
-            if ($http_upgrade != "websocket") {
-                
-                return 404;
-            }
-
-            location ~ /downloader/\d\d\d\d\d$ {
-
-                if ($request_uri ~* "([^/]*$)" ) {
-                    set $port $1;
-                }
+        location ~ .+\.js$ {
+            add_header Access-Control-Allow-Origin *;
+            default_type application/javascript;
+        }
 
 
-                
-                proxy_redirect off;
+        location /panel {
+                # First attempt to serve request as file, then
+                # as directory, then fall back to displaying a 404.
+                 proxy_redirect off;
 
 
-                proxy_pass http://127.0.0.1:$port/;
+                proxy_pass http://0.0.0.0:12345/;
 
 
             
@@ -77,9 +71,6 @@ server {
 
 
                 proxy_set_header Upgrade $http_upgrade;
-
-
-                proxy_set_header Connection "upgrade";
 
 
                 
@@ -91,15 +82,50 @@ server {
 
             
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
 
+        location ~ /ray/\d\d\d\d\d$ {
+
+            if ($request_uri ~* "([^/]*$)" ) {
+                set $port $1;
             }
 
 
-            return 404;
+            if ($http_upgrade != "websocket") {
+                
+                return 404;
+            }
+            
+            proxy_redirect off;
 
+
+            proxy_pass http://127.0.0.1:$port/;
+
+
+        
+            proxy_http_version 1.1;
+
+
+            proxy_set_header Upgrade $http_upgrade;
+
+
+            proxy_set_header Connection "upgrade";
+
+
+            
+            proxy_set_header Host $host;
+
+
+            proxy_set_header X-Real-IP $remote_addr;
+
+
+        
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
         }
 
+
+        
         # pass PHP scripts to FastCGI server
         #
         #location ~ \.php$ {
